LU-4243 mgs: use different UUIDs for failover NIDs

in mgs_write_log_failnids, different UUID should be used for
each failover NID, otherwise only one NID will be used by Lustre
(it will be the first one if these NIDs has same distance).

Change-Id: Ibd989de67fe6851cc75569be3f64dadaec5e6f8c
Signed-off-by: Hongchao Zhang <hongchao.zhang@intel.com>